deploy/base/reconciler/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reconciler
spec:
  selector:
    app: reconciler
  ports:
    - name: http
      port: 8082
      targetPort: 8082
  type: ClusterIP
